result list styling + a few other elements styling

--- a/app/components/home-page.html
+++ b/app/components/home-page.html
@@ -1,7 +1,7 @@
-<nav>
+<header>
     <p id="site-title">Film Finder</p>
-    <button id="watch-btn"><i class="material-icons">movie</i> View Watchlist</button>
-</nav>
+    <button id="watch-btn"><i class="material-icons">movie  </i>  View Watchlist</button>
+</header>
 <section class="main-container">
     <section class="photo-container">
     </section>
@@ -48,8 +48,15 @@
     </section>
     <section class="results-container">
         <p id="results-title">Movies</p>
-        <ul>
-            <li>Movie</li>
-        </ul>
+        <section class= "single-result">
+            <img class= "result-img" src= "star-wars.jpg">
+            <p class= "result-title">Star Wars</p>
+            <p class= "result-genre">Action/Adventure</p>
+            <p class= "result-rating"></p>
+            <p class= "result-year">1977</p>
+            <i class="material-icons">star</i>
+        </section>
+        
+        
     </section>
 </section>
