--- a/styles.css
+++ b/styles.css
@@ -21,9 +21,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    
 }
-
 
 header {
     display: flex;
@@ -64,8 +62,7 @@ header {
     display: flex;
     align-items: center;
     margin-top: 40px;
-    margin-bottom: 40px;
-    
+    margin-bottom: 40px; 
 }
 
 #search-input {
@@ -156,9 +153,7 @@ i {
     color: white;
     background-color: black;
     border-radius: 15px;
-  
 }
-
 
 .watchlist-test {
     color: white;
@@ -167,14 +162,12 @@ i {
     align-items: center;
 }
 
-
 .single-result {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     width: 95%;
     margin: 0 auto;
-
     height: 150px;
     align-items: center;
     font-family: "Space Mono";
@@ -189,17 +182,13 @@ i {
     width: 148px;
 }
 
-
-
-
-
+#star {
+    font-size: 70px;
+}
 .material-icons:hover{
     color: yellow;
     font-weight: bold;
     cursor: pointer;
-
-    
-
 }
 
 .material-icons:click {
@@ -214,10 +203,8 @@ i {
 
 .result-title {
     font-size: 2em;
-
     height: 100px;
     align-items: center;
-
 }
 
 .icon-x {
