--- a/app/components/watchlist-page.html
+++ b/app/components/watchlist-page.html
@@ -1,13 +1,16 @@
-<section class="container-watchlist">
-    <p class="watchlist-test">Watchlist</p>
+<section class="wl-background">
+<!-- <section class="container-watchlist"> -->
     <p class="icon-x"><i class="material-icons">close</i></p>
-</section>
-<section class="wl-class">
+    <p class="wl-heading">Watchlist</p>
+<!-- </section> -->
+<section class="wl-class-popup">
     <img class="wl-image" src="">
     <p class="wl-title">Title:</p>
     <p class="wl-genre">Genre:</p>
     <p class="wl-rating">Rating:</p>
-    <p class="wl-year">Year:</p>
-    <button class="remove-btn" ng-click="$ctrl.showForm();" ng-submit="$ctrl.showForm();">Remove<i class='far fa-minus-square'></i>
+    <p class="wl-year">Release Year:</p>
+    <button class="remove-btn" ng-click="$ctrl.showForm();" ng-submit="$ctrl.showForm();">Remove<i class='material-icons'>delete</i>
     </button>
+</section>
+
 </section>
