hidden results container, search component separated and bound

--- a/app/components/watchlist-page.html
+++ b/app/components/watchlist-page.html
@@ -1,13 +1,16 @@
-<section class="container-watchlist">
-    <p class="watchlist-test">Watchlist</p>
-    <p class="icon-x"><i class="material-icons">close</i></p>
-</section>
-<section class="wl-class">
-    <img class="wl-image" src="">
-    <p class="wl-title">Title:</p>
-    <p class="wl-genre">Genre:</p>
-    <p class="wl-rating">Rating:</p>
-    <p class="wl-year">Year:</p>
-    <button class="remove-btn" ng-click="$ctrl.showForm();" ng-submit="$ctrl.showForm();">Remove<i class='far fa-minus-square'></i>
-    </button>
+
+<section class= "watchlist-body">
+    <section class="container-watchlist">
+        <p class="watchlist-test">Watchlist</p>
+        <p class="icon-x"><i class="material-icons">close</i></p>
+    </section>
+    <section class="wl-class">
+        <img class="wl-image" src="">
+        <p class="wl-title">Title:</p>
+        <p class="wl-genre">Genre:</p>
+        <p class="wl-rating">Rating:</p>
+        <p class="wl-year">Year:</p>
+        <button class="remove-btn" ng-click="$ctrl.showForm();" ng-submit="$ctrl.showForm();">Remove<i class='far fa-minus-square'></i>
+        </button>
+    </section>
 </section>
