--- a/app/components/search-page.html
+++ b/app/components/search-page.html
@@ -1,1 +1,34 @@
-<p class="searchtest">Search</p>
+<section class="search-container">
+
+    <input ng-model="$ctrl.keyword" id="search-input" type="text" placeholder="Keyword Search">
+    <select class="dropdown">
+
+        <option value="comedy">Comedy</option>
+        <option value="horror">Horror</option>
+        <option value="childrens">Childrens</option>
+        <option value="action">Action</option>
+        <option value="drama">Drama</option>
+        <option value="sci-fi">Sci-Fi</option>
+    </select>
+
+    <select class="dropdown">
+
+        <option value="2010s">2010s</option>
+        <option value="2000s">2000s</option>
+        <option value="1990s">1990s</option>
+        <option value="1980s">1980s</option>
+        <option value="1970s">1970s</option>
+        <option value="1960s">1960s</option>
+        <option value="1950s">1950s</option>
+        <option value="1940s">1940s</option>
+        <option value="1930s">1930s</option>
+        <option value="1920s">1920s</option>
+        <option value="1910s">1910s</option>
+        <option value="1900s">1900s</option>
+        
+    </select>
+
+
+
+    <button ng-click="$ctrl.search({keyword: $ctrl.keyword});" id="search-btn">Search Movies</button>
+</section>
