--- a/app/components/watchlist-page.html
+++ b/app/components/watchlist-page.html
@@ -1,17 +1,17 @@
 
 <section class= "wl-background">
     <section class="container-watchlist">
-        <p class="icon-x"><i class="material-icons">close</i></p>
+        <p class="icon-x"><i ng-click= "$ctrl.displayHome();" class="material-icons">close</i></p>
         <p class="wl-heading">Watchlist</p>
-    </section>
-    <section class="wl-class-popup">
-        <img class="wl-image" src="">
-        <p class="wl-title">Title:</p>
-        <p class="wl-genre">Genre:</p>
-        <p class="wl-rating">Rating:</p>
-        <p class="wl-year">Year:</p>
-        <button class="remove-btn" ng-click="">Remove<i class='material icons'>Delete</i>
-        </button>
+        <section class="wl-class-popup">
+            <img class="wl-image" src="">
+            <p class="wl-title">Title:</p>
+            <p class="wl-genre">Genre:</p>
+            <p class="wl-rating">Rating:</p>
+            <p class="wl-year">Year:</p>
+            <button class="remove-btn" ng-click=""><i class="material-icons">delete</i>
+            </button>
+        </section>
     </section>
 </section>
 
