--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ header {
     background-color: maroon;
     border: 1px solid silver;
     color: silver;
+    font-size: 20px;
 }
 
 #watch-btn:hover {
@@ -59,8 +60,6 @@ header {
     align-items: center;
     margin-top: 30px;
     margin-bottom: 30px;
-    
-
 }
 
 #search-input {
@@ -71,16 +70,19 @@ header {
     border: 2px solid black;
     border-radius: 5px;
     background-color: silver;
+    font-size: 20px;
 }
 
 #search-input::placeholder {
     color: black;
+    font-size: 18px;
 }
 
 .dropdown {
     height: 30px;
     margin-right: 10px;
     background-color: silver;
+    font-size: 14px;
 }
 
 #search-btn {
@@ -91,6 +93,7 @@ header {
     padding: 10px;
     background-color: maroon;
     color: silver;
+    font-size: 13px;
 }
 
 #search-btn:hover {
@@ -113,7 +116,7 @@ header {
     display: block;
     padding: 5px;
     border-radius: 5px;
-    width: 90%;
+    width: 1200px;
     background-color: silver;
     height: 330px;
     overflow: scroll;
@@ -170,11 +173,6 @@ i {
   
 }
 
-
-
-
-
-
 .wl-background {
     background-image: url("theater.jpg");
     /* display: flex;
@@ -203,13 +201,9 @@ i {
     width: 148px;
 }
 
-
 #star {
     font-size: 70px;
 }
-
-
-
 
 
 #star:hover {
@@ -217,7 +211,6 @@ i {
     font-weight: bold;
     cursor: pointer;
 }
-
 
 #results-title {
     font-weight: bolder;
@@ -228,6 +221,7 @@ i {
 .result-title {
     font-size: 2em;
     height: 100px;
+    width: 200px;
     align-items: center;
 }
 
