--- a/app/components/results-list.html
+++ b/app/components/results-list.html
@@ -2,7 +2,7 @@
 
     <p id="results-title">Movies</p>
 
-    <section class="single-result" ng-repeat="movie in $ctrl.movies">
+    <section expand-on-focus class="single-result" ng-repeat="movie in $ctrl.movies">
         <img class="result-img" ng-src="https://image.tmdb.org/t/p/w92{{ movie.poster_path }}" class="image">
         <p class="result-title">{{ movie.title }}</p>
         <p class="result-genre">  
@@ -12,8 +12,7 @@
         </p>
         <p class="result-rating">{{ movie.vote_average}} out of 10</p>
         <p class="result-year">{{ movie.release_date | date: 'yyyy'}}</p>
-        <i ng-click="$ctrl.addMovie({ movie: $ctrl.movie });" class="material-icons" id="star">star</i>
-
+        <i yellow ng-click="$ctrl.addMovieToList(movie);" class="material-icons" id="star">star</i>
     </section>
 
 </section>
