--- a/app/components/results-list.html
+++ b/app/components/results-list.html
@@ -3,7 +3,9 @@
     <p id="results-title">Movies</p>
 
     <section expand-on-focus class="single-result" ng-repeat="movie in $ctrl.movies">
-        <img class="result-img" ng-src="https://image.tmdb.org/t/p/w92{{ movie.poster_path }}" class="image">
+        <section class= "result-img">
+            <img class="movie-pic" ng-src="https://image.tmdb.org/t/p/w92{{ movie.poster_path }}" class="image">
+        </section>
         <p class="result-title">{{ movie.title }}</p>
         <p class="result-genre">  
             <ul>
