more info hover

--- a/app/components/results-list.html
+++ b/app/components/results-list.html
@@ -6,7 +6,9 @@
 
         <section class= "result-img">
             <img class="movie-pic" ng-src="https://image.tmdb.org/t/p/w92{{ movie.poster_path }}" class="image">
+            <p class="more-info">Click for summary.</p>
         </section>
+
         <p class="result-title">{{ movie.title }}</p>
         <p class="result-genre">  
             <ul>
