pushed to the master ooooooops

--- a/app/components/search-page.html
+++ b/app/components/search-page.html
@@ -27,7 +27,8 @@
     </select>-->
 
     <select class="dropdown" ng-model="$ctrl.searchCriteria.primary_release_year">
-
+        
+        <option id= "year-option" value= "">Year</option>
         <option value="2018">2018</option>
         <option value="2017">2017</option>
         <option value="2016">2016</option>
