--- a/app/components/results-list.html
+++ b/app/components/results-list.html
@@ -2,7 +2,7 @@
 
     <p id="results-title">Movies</p>
 
-    <section expand-on-focus class="single-result" ng-repeat="movie in $ctrl.movies">
+    <section class="single-result" ng-repeat="movie in $ctrl.movies">
 
         <section class= "result-img">
             <img class="movie-pic" ng-src="https://image.tmdb.org/t/p/w92{{ movie.poster_path }}" class="image">
