--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
     
 }
 
+
 .main-container {
     display: flex;
     flex-direction: column;
@@ -85,6 +86,11 @@ header {
     font-size: 14px;
 }
 
+
+#year-option {
+    color: #999999;
+}
+
 #search-btn {
     width: 130px;
     height: 40px;
@@ -137,6 +143,25 @@ i {
 
 
 
+
+.movie-pic {
+    -webkit-filter: brightness(100%);
+}
+
+
+
+.movie-pic:hover {
+    -webkit-filter: brightness(15%);
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
+    cursor: pointer;
+}
+
+
+
 .wl-title {
     font-family: "Kanit";
     font-size: 2em;
@@ -180,6 +205,8 @@ i {
     height: 148px;
     width: 148px;
 }
+
+
 
 #star {
     font-size: 70px;
